Fix styles for widgets on mobiles

--- a/style.scss
+++ b/style.scss
@@ -440,6 +440,7 @@ blockquote {
   line-height: 1.4em;
   position: relative;
   color: $secondaryColor;
+  margin: 16px 0 16px 1.5em;
 
   &::before {
     font-family: 'FontAwesome';
@@ -1052,7 +1053,7 @@ a:active {
 .post-navigation a,
 .paging-navigation a {
   display: block;
-  width: 100%;
+  width: 98%;
   text-decoration: none;
   padding: 16px;
   @include card;
@@ -1072,7 +1073,7 @@ a:active {
 
 
 .nav-previous {
-  padding-bottom: 1em;
+  padding-bottom: 0.1em;
 }
 
 @media screen and (min-width: 30em) {
@@ -1124,20 +1125,28 @@ a:active {
   padding: 0;
   list-style-type: none;
 
+  .page-numbers.dots{
+    font-size: 16px;
+    margin: 0 6px;
+  }
+
 }
 
 .paging-navigation li {
   display: inline-block;
+    margin-right: 4px;
+
 }
 
 .paging-navigation li a {
-  padding: .3em 1em;
+  padding: .3em 10px;
   margin: .4em .2em;
 }
 
 .paging-navigation .current {
   padding: .8em 1.1em;
   font-weight: 700;
+  color: $secondaryColor;
 }
 
 /*--------------------------------------------------------------
@@ -1371,8 +1380,8 @@ input[type="search"] {
 }
 
 .widget {
-  margin: 0 0 1.5em;
-  padding: 1.8em;
+  padding: 2px ($index-card-x-padding - 5px);
+  margin: 10px 10px 20px;
   background: #fff;
   margin-bottom: 2em;
   border-radius: 6px;
@@ -1408,7 +1417,7 @@ input[type="search"] {
 
 .widget ul,
 .widget ol {
-  padding: 6px 0 0;
+  padding: 6px 0;
   margin: 0;
   font-family: "Fira Sans", sans-serif;
   list-style-type: none;
@@ -1853,7 +1862,7 @@ input[type="search"] {
   display: block;
   content: "";
   width: 5em;
-  border-bottom: 2px solid #FCAC42;
+  border-bottom: 2px solid $secondaryColor;
   margin: 0 auto 3em;
 }
 
@@ -1937,6 +1946,7 @@ input[type="submit"] {
   color: #000;
   border-radius: 4px;
   transition: all 0.3s;
+  background: white;
 
   &:hover,
   &:focus {
